--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^3.4.1",
     "bootstrap-social": "^5.1.1",
+    "finnhub": "^1.2.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "minimist": "^1.2.5",
